implemented retrieval of all tests for a bug